# Patissier

./: pyproject.toml
exemples/: demo.py
src/patissier/: __init__.py  recettes.py
