[project]
name = "patissier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pierre DUMONT ROTY", email = "pierre-dr@hotmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
patissier = "patissier:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
